--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,6 @@
   },
   "dependencies": {
     "react-native": "^0.21.0",
-    "react-native-autocomplete-input": "file:///Users/lbo/code/mbm/vedian/react-native-autocomplete-input"
+    "react-native-autocomplete-input": "../"
   }
 }
