--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-autocomplete-input",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Pure javascript autocomplete input for react-native",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,9 @@
     "url": "https://github.com/l-urence/react-native-autocomplete-input/issues"
   },
   "homepage": "https://github.com/l-urence/react-native-autocomplete-input#readme",
+  "dependencies": {
+    "react-native-timer": "^1.1.2",
+  },
   "devDependencies": {
     "babel-eslint": "^5.0.0",
     "eslint": "^2.0.1",
