--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react-native": "^0.26.2",
+    "react": "^15.1.0",
+    "react-native": "^0.27.2",
     "react-native-autocomplete-input": "../"
   }
 }
