--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.1.0",
   "description": "Pure javascript autocomplete input for react-native",
   "main": "index.js",
+  "options": {
+    "mocha": "--require react-native-mock/mock.js --compilers js:babel-core/register ./__tests__/**/*.js"
+  },
   "scripts": {
+    "coverage": "node_modules/.bin/nyc mocha $npm_package_options_mocha && node_modules/.bin/nyc report --reporter=lcov",
     "lint": "eslint ./*.js ./example/*.js",
-    "test": "npm run lint"
+    "test": "npm run lint && npm run testonly",
+    "testonly": "mocha $npm_package_options_mocha"
   },
   "repository": {
     "type": "git",
@@ -31,8 +36,37 @@
   "homepage": "https://github.com/l-urence/react-native-autocomplete-input#readme",
   "devDependencies": {
     "babel-eslint": "^5.0.0",
+    "babel-plugin-transform-class-properties": "^6.10.2",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.8.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-register": "^6.9.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.3.0",
     "eslint": "^2.0.1",
     "eslint-plugin-babel": "^3.1.0",
-    "eslint-plugin-react": "^3.16.1"
+    "eslint-plugin-react": "^3.16.1",
+    "estraverse-fb": "^1.3.1",
+    "jest-cli": "^13.0.0",
+    "mocha": "^2.5.3",
+    "nyc": "^6.6.1",
+    "react": "^15.1.0",
+    "react-addons-test-utils": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-native": "^0.28.0",
+    "react-native-mock": "^0.2.3",
+    "sinon": "^1.17.4"
+  },
+  "babel": {
+    "plugins": [
+      "transform-class-properties",
+      "transform-es2015-arrow-functions",
+      "transform-es2015-destructuring",
+      "transform-es2015-modules-commonjs",
+      "transform-object-rest-spread",
+      "transform-react-jsx"
+    ]
   }
 }
