--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,6 @@
   "dependencies": {
     "react": "^15.1.0",
     "react-native": "^0.31.0",
-    "react-native-autocomplete-input": "../"
+    "react-native-autocomplete-input": ""
   }
 }
