--- a/example/package.json
+++ b/example/package.json
@@ -6,8 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "^15.3.1",
+    "react": "~15.3.2",
     "react-native": "^0.34.0",
-    "react-native-autocomplete-input": "../"
+    "react-native-autocomplete-input": "file:../"
   }
 }
