--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react": "~15.4.0-rc.4",
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.2.1",
-    "react-native": "0.40.0",
+    "react-native": "^0.40.0",
     "react-native-mock": "^0.2.3",
     "sinon": "^1.17.4"
   }
