Update example to RN 0.40.0

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "no-use-before-define": "off",
 
     // Import
+    "import/extensions": ["off", "never"],
     "import/no-extraneous-dependencies": "off",
 
     // React
