--- a/example/package.json
+++ b/example/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "AutocompleteExample",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
-  },
-  "dependencies": {
-    "react": "~15.3.2",
-    "react-native": "^0.34.0",
-    "react-native-autocomplete-input": "file:../"
-  }
+	"name": "AutocompleteExample",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start"
+	},
+	"dependencies": {
+		"react": "~15.4.0-rc.4",
+		"react-native": "0.40.0",
+		"react-native-autocomplete-input": ".."
+	}
 }
