--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/l-urence/react-native-autocomplete-input#readme",
   "devDependencies": {
-    "babel-eslint": "^6.1.0",
+    "babel-eslint": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-plugin-transform-es2015-arrow-functions": "^6.8.0",
     "babel-plugin-transform-es2015-destructuring": "^6.9.0",
@@ -46,18 +46,18 @@
     "chai": "^3.5.0",
     "enzyme": "^2.3.0",
     "eslint": "^3.5.0",
-    "eslint-config-airbnb": "^11.0.0",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.9.2",
-    "eslint-plugin-jsx-a11y": "^2.2.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.2.0",
     "estraverse-fb": "^1.3.1",
-    "mocha": "^2.5.3",
-    "nyc": "^6.6.1",
-    "react": "^15.3.1",
+    "mocha": "^3.2.0",
+    "nyc": "^10.1.2",
+    "react": "~15.4.0-rc.4",
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.2.1",
-    "react-native": "^0.34.0",
+    "react-native": "0.40.0",
     "react-native-mock": "^0.2.3",
     "sinon": "^1.17.4"
   }
