--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-autocomplete-input",
-  "version": "2.1.0",
+  "version": "3.0.0-rc.0",
   "description": "Pure javascript autocomplete input for react-native",
   "main": "index.js",
   "options": {
