--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "plugins": [
-    "transform-class-properties",
-    "transform-es2015-arrow-functions",
-    "transform-es2015-destructuring",
-    "transform-es2015-modules-commonjs",
-    "transform-object-rest-spread",
-    "transform-react-jsx"
-  ]
+  "presets": ["react-native"]
 }
