--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/l-urence/react-native-autocomplete-input#readme",
   "dependencies": {
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -52,9 +52,9 @@
     "estraverse-fb": "^1.3.1",
     "mocha": "^3.2.0",
     "nyc": "^10.1.2",
-    "react": "~15.4.0-rc.4",
-    "react-addons-test-utils": "^15.2.1",
-    "react-dom": "^15.2.1",
+    "react": "^16.0.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.0.0",
     "react-native": "^0.40.0",
     "react-native-mock": "^0.3.1",
     "sinon": "^1.17.4"
