--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react": "~15.5.4",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "~15.5.4",
-    "react-native": "^0.40.0",
+    "react-native": "0.59.8",
     "react-native-mock": "^0.3.1",
     "sinon": "^1.17.4"
   }
