--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pure javascript autocomplete input for react-native",
   "main": "index.js",
   "options": {
-    "mocha": "--require react-native-mock/mock.js --compilers js:babel-register ./__tests__/**/*.js"
+    "mocha": "--require react-native-mock/mock.js --require @babel/register ./__tests__/**/*.js"
   },
   "scripts": {
     "coverage": "node_modules/.bin/nyc mocha $npm_package_options_mocha && node_modules/.bin/nyc report --reporter=lcov",
@@ -36,9 +36,8 @@
   "homepage": "https://github.com/l-urence/react-native-autocomplete-input#readme",
   "dependencies": {},
   "devDependencies": {
+    "@babel/register": "^7.4.4",
     "babel-eslint": "^7.1.1",
-    "babel-preset-react-native": "^1.9.1",
-    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "enzyme": "^2.3.0",
     "eslint": "^3.5.0",
@@ -48,7 +47,8 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.2.0",
     "estraverse-fb": "^1.3.1",
-    "mocha": "^3.2.0",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "mocha": "^6.1.4",
     "nyc": "^10.1.2",
     "react": "~15.5.4",
     "react-addons-test-utils": "^15.6.2",
