--- a/.eslintrc
+++ b/.eslintrc
@@ -42,17 +42,20 @@
     "no-underscore-dangle": "off",
     "no-unused-expressions": "off",
     "no-use-before-define": "off",
+    "object-curly-newline": "off",
 
     // Import
     "import/extensions": ["off", "never"],
     "import/no-extraneous-dependencies": "off",
 
     // React
+    "react/destructuring-assignment": "off",
     "react/forbid-prop-types": "off",
     "react/jsx-boolean-value": ["error", "always"],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "react/jsx-one-expression-per-line": "off"
   }
 }
