Replace mocha with jest

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,12 +18,14 @@
 
 
   "env": {
-    "es6": true
+    "es6": true,
+    "jest/globals": true,
   },
 
 
   "plugins": [
-    "react"
+    "jest",
+    "react",
   ],
 
 
