--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "4.1.0",
   "description": "Pure javascript autocomplete input for react-native",
   "main": "index.js",
-  "options": {
-    "mocha": "--require react-native-mock/mock.js --require @babel/register ./__tests__/**/*.js"
-  },
   "scripts": {
-    "coverage": "node_modules/.bin/nyc mocha $npm_package_options_mocha && node_modules/.bin/nyc report --reporter=lcov",
-    "lint": "eslint ./*.js ./example/*.js",
     "test": "npm run lint && npm run testonly",
-    "testonly": "mocha $npm_package_options_mocha"
+    "lint": "eslint ./*.js ./example/*.js ./__tests__/*.js",
+    "testonly": "jest"
   },
   "repository": {
     "type": "git",
@@ -34,27 +30,23 @@
     "url": "https://github.com/l-urence/react-native-autocomplete-input/issues"
   },
   "homepage": "https://github.com/l-urence/react-native-autocomplete-input#readme",
-  "dependencies": {},
   "devDependencies": {
-    "@babel/register": "^7.4.4",
-    "babel-eslint": "^7.1.1",
-    "chai": "^3.5.0",
-    "enzyme": "^2.3.0",
-    "eslint": "^6.0.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.14.0",
-    "estraverse-fb": "^1.3.1",
-    "metro-react-native-babel-preset": "^0.54.1",
-    "mocha": "^6.1.4",
-    "nyc": "^10.1.2",
-    "react": "~15.5.4",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dom": "~15.5.4",
-    "react-native": "0.59.8",
-    "react-native-mock": "^0.3.1",
-    "sinon": "^1.17.4"
+    "@babel/core": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.8.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.13.6",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.55.0",
+    "react": "^16.8.6",
+    "react-native": "^0.60.4",
+    "react-test-renderer": "16.8.6"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
