--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,18 @@
-name: test
+name: release
 
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
-  test:
+  release:
     runs-on: ubuntu-latest
+    needs: test
     steps:
     - uses: actions/checkout@v2
     - name: Setup Node
       uses: actions/setup-node@v1
       with:
         node-version: '14.x'
-    - name: Install dependencies
-      run: yarn install
-    - name: Test
-      run: yarn test
+    - name: Release
+      run: npx semantic-release
