--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,10 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v1
       with:
-        node-version: '14.x'
+        node-version: '18.x'
     - name: Install dependencies
       run: yarn install
     - name: Test
       run: yarn test
+    - name: Build
+      run: yarn build
