--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,16 @@
   "compilerOptions": {
     "declaration": true,
     "outDir": "dist",
-    "noEmit": false
+    "noEmit": false,
+    "target": "es2022",
+    "module": "esnext",
+    "esModuleInterop": true,
   },
   "files": ["index.tsx", "types.d.ts"],
   "exclude": [
     "__tests__",
     "node_modules",
     "babel.config.js",
-    "metro.config.js",
     "jest.config.js"
   ]
 }
