--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18.x'
+    - name: Install
+      run: yarn
+    - name: Build
+      run: yarn build
     - name: Release
       run: npx semantic-release
       env:
