--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,11 @@
 # OSX
-#
 .DS_Store
 
-# Xcode
-#
-dist/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-project.xcworkspace
-
-# Android/IJ
-#
-.idea
-.gradle
-local.properties
+# Build
+dist
 
 # node.js
-#
 node_modules/
 npm-debug.log
-coverage
-.nyc_output
-
 yarn.lock
 yarn-error.log
