chore: sematic-release was lacking permissions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,11 @@ on:
     types: 
       - completed
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
