--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
       id-token: write
     steps:
     - uses: actions/checkout@v3
+      with:
+       fetch-depth: 0
     - name: Setup Node
       uses: actions/setup-node@v3
       with:
