chore: remove eslint-airbnb due to ESLint version support

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb", "plugin:prettier/recommended", "eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "extends": ["plugin:prettier/recommended", "eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "jest", "react", "prettier"],
   "root": true,
