--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "npm run lint && npm run testonly",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "lint": "eslint",
     "testonly": "jest",
     "build": "rm -rf dist && tsc"
   },
@@ -38,24 +38,18 @@
     "@types/react": "^18.0.28",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^29.4.3",
     "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react": "^7.37.1",
     "jest": "^29.4.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-native": "^0.75.3",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.8.0"
   },
   "dependencies": {
     "deprecated-react-native-prop-types": "^5.0.0"
