--- a/.github/workflows/depdendabot.yml
+++ b/.github/workflows/depdendabot.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   automerge:
-    if: ${{ contains(github.head_ref, 'dependabot/npm_and_yarn') }}
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
     runs-on: ubuntu-latest
     env:
       PR_URL: ${{github.event.pull_request.html_url}}
