--- a/.github/workflows/depdendabot.yml
+++ b/.github/workflows/depdendabot.yml
@@ -2,6 +2,8 @@ name: Approve and auto-merge dependabot PRs
 
 on:
   pull_request:
+    types:
+      - opened
     branches: [main]
 
 permissions:
