--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/byteburgers/react-native-autocomplete-input#readme",
   "devDependencies": {
+    "@react-native/metro-config": "^0.76.1",
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.28",
@@ -42,7 +43,6 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
     "jest": "^29.4.3",
-    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-native": "^0.76.1",
