--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npm run lint && npm run testonly",
     "lint": "eslint",
     "testonly": "jest",
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc --project tsconfig.build.json"
   },
   "repository": {
     "type": "git",
@@ -33,11 +33,10 @@
   },
   "homepage": "https://github.com/byteburgers/react-native-autocomplete-input#readme",
   "devDependencies": {
-    "@react-native/metro-config": "^0.76.1",
-    "@tsconfig/react-native": "^3.0.5",
+    "@react-native/typescript-config": "^0.76.1",
+    "@testing-library/react-native": "^12.8.1",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.28",
-    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.4.3",
     "eslint": "^9.11.1",
     "eslint-plugin-prettier": "^5.2.1",
@@ -46,7 +45,6 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-native": "^0.76.1",
-    "react-test-renderer": "^18.2.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0"
   },
