--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,6 @@
 {
-  "extends": "@tsconfig/react-native/tsconfig.json",
+  "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
-    "declaration": true,
-    "outDir": "dist",
-    "noEmit": false,
-    "target": "es2022",
-    "module": "esnext",
-    "esModuleInterop": true,
-  },
-  "files": ["index.tsx", "types.d.ts"],
-  "exclude": [
-    "__tests__",
-    "node_modules",
-    "babel.config.js",
-    "jest.config.js"
-  ]
+    "types": ["@testing-library/react-native/extend-expect", "jest", "./types.d.ts"]
+  }
 }
