chore: bump actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,11 @@ jobs:
       pull-requests: write
       id-token: write
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@4
       with:
        fetch-depth: 0
     - name: Setup Node
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version-file: '.node-version'
     - name: Install
