--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       pull-requests: write
       id-token: write
     steps:
-    - uses: actions/checkout@4
+    - uses: actions/checkout@v4
       with:
        fetch-depth: 0
     - name: Setup Node
