chore: try to checkout the correct branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
        fetch-depth: 0
+       ref: ${{ github.event.workflow_run.head_branch }}
     - name: Setup Node
       uses: actions/setup-node@v4
       with:
