--- a/package.json
+++ b/package.json
@@ -1,54 +1,28 @@
 {
-  "name": "react-native-autocomplete-input",
-  "version": "5.1.0",
-  "description": "Pure javascript autocomplete input for react-native",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "npm run lint && npm run testonly",
     "lint": "eslint",
-    "testonly": "jest",
-    "build": "rm -rf dist && tsc --project tsconfig.build.json"
+    "build": "nx run-many --target=build --all",
+    "test": "npm run lint && nx run-many --target=test --all"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/byteburgers/react-native-autocomplete-input.git"
-  },
-  "files": [
-    "LICENSE",
-    "README.md",
-    "dist/index.js",
-    "dist/index.d.ts"
-  ],
-  "keywords": [
-    "react-native",
-    "iOS",
-    "input",
-    "Android",
-    "autocomplete"
-  ],
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/byteburgers/react-native-autocomplete-input/issues"
-  },
   "homepage": "https://github.com/byteburgers/react-native-autocomplete-input#readme",
   "devDependencies": {
-    "@react-native/typescript-config": "^0.76.1",
-    "@testing-library/react-native": "^12.8.1",
-    "@types/jest": "^29.4.0",
-    "@types/react": "^18.0.28",
-    "babel-jest": "^29.4.3",
+    "@nx/js": "^20.3.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
     "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
-    "jest": "^29.4.3",
+    "nx": "20.3.0",
     "prettier": "^3.3.3",
-    "react": "^18.3.1",
-    "react-native": "^0.76.1",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0"
   },
-  "dependencies": {
-    "deprecated-react-native-prop-types": "^5.0.0"
-  }
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
+  "dependencies": {}
 }
