chore: prevent release for none packages

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,8 @@ on:
     branches: [main]
     types:
       - completed
+    paths:
+      - 'packages/react-native-autocomplete-input/**'
 
 jobs:
   release:
