chore: no need to add types anymore

--- a/packages/react-native-autocomplete-input/tsconfig.json
+++ b/packages/react-native-autocomplete-input/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
-    "types": ["@testing-library/react-native/extend-expect", "jest", "./types.d.ts"]
+    "types": ["jest", "./types.d.ts"]
   }
 }
