--- a/packages/react-native-autocomplete-input/tsconfig.json
+++ b/packages/react-native-autocomplete-input/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",
+  "extends": ["@react-native/typescript-config/tsconfig.json"],
   "compilerOptions": {
     "types": ["jest", "./types.d.ts"]
   }
