--- a/examples/StarWarsMovieFinder/package.json
+++ b/examples/StarWarsMovieFinder/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "test": "tsc --noEmit",
     "web": "expo start --web"
   },
   "dependencies": {
