--- a/packages/react-native-autocomplete-input/tsconfig.build.json
+++ b/packages/react-native-autocomplete-input/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": ["./tsconfig.json"],
   "compilerOptions": {
     "noEmit": false,
     "outDir": "./dist",
