--- a/packages/react-native-autocomplete-input/tsconfig.json
+++ b/packages/react-native-autocomplete-input/tsconfig.json
@@ -1,6 +1,19 @@
 {
-  "extends": ["@react-native/typescript-config/tsconfig.json"],
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "types": ["jest", "./types.d.ts"]
-  }
+    "allowJs": true,
+    "esModuleInterop": true,
+    "jsx": "react-native",
+    "lib": ["DOM", "ESNext"],
+    "module": "preserve",
+    "moduleDetection": "force",
+    "moduleResolution": "bundler",
+    "customConditions": ["react-native"],
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "target": "ESNext"
+  },
+
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
