build: bump react-native

--- a/packages/react-native-autocomplete-input/tsconfig.json
+++ b/packages/react-native-autocomplete-input/tsconfig.json
@@ -1,19 +1,6 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": ["@react-native/typescript-config/tsconfig.json"],
   "compilerOptions": {
-    "allowJs": true,
-    "esModuleInterop": true,
-    "jsx": "react-native",
-    "lib": ["DOM", "ESNext"],
-    "module": "preserve",
-    "moduleDetection": "force",
-    "moduleResolution": "bundler",
-    "customConditions": ["react-native"],
-    "noEmit": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "target": "ESNext"
-  },
-
-  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
+    "types": ["jest", "./types.d.ts"]
+  }
 }
