--- a/examples/StarWarsMovieFinder/package.json
+++ b/examples/StarWarsMovieFinder/package.json
@@ -10,15 +10,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.18",
-    "expo-status-bar": "~2.2.3",
-    "react": "18.3.1",
-    "react-native": "0.77.0",
+    "expo": "~54.0.9",
+    "expo-status-bar": "~3.0.8",
+    "jest": "~29.7.0",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-autocomplete-input": "^5.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
-    "@types/react": "~18.3.12"
+    "@types/react": "~19.1.10"
   },
   "private": true
 }
