--- a/packages/react-native-autocomplete-input/package.json
+++ b/packages/react-native-autocomplete-input/package.json
@@ -31,14 +31,14 @@
   },
   "homepage": "https://github.com/byteburgers/react-native-autocomplete-input#readme",
   "devDependencies": {
-    "@testing-library/react-native": "^13.2.2",
+    "@react-native/typescript-config": "^0.81.0",
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.1.10",
     "babel-jest": "^30.0.5",
-    "babel-preset-expo": "^13.2.3",
     "jest": "^30.0.4",
-    "react-native": "^0.80.1",
-    "react-native-builder-bob": "^0.23.2",
+    "react": "^19.1.0",
+    "react-native": "0.81.4",
     "react-test-renderer": "^19.1.0"
   },
   "jest": {
