--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         node-version-file: '.nvmrc'
         cache: 'npm'
     - name: Install dependencies
-      run: npm ci --no-audit --prefer-offline
+      run: npm ci --no-audit --prefer-offline --retry 3
     - name: Test
       run: npm test
     - name: Build
