chore: debug deps

--- a/packages/react-native-autocomplete-input/package.json
+++ b/packages/react-native-autocomplete-input/package.json
@@ -30,6 +30,10 @@
     "url": "https://github.com/byteburgers/react-native-autocomplete-input/issues"
   },
   "homepage": "https://github.com/byteburgers/react-native-autocomplete-input#readme",
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-native": ">=0.60.0"
+  },
   "devDependencies": {
     "@react-native/typescript-config": "^0.81.0",
     "@testing-library/react-native": "^13.3.3",
@@ -37,9 +41,7 @@
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
     "babel-jest": "^30.0.5",
-    "jest": "^30.0.4",
-    "react": "^19.1.0",
-    "react-native": "0.81.4"
+    "jest": "^30.0.4"
   },
   "jest": {
     "preset": "react-native",
