--- a/examples/StarWarsMovieFinder/package.json
+++ b/examples/StarWarsMovieFinder/package.json
@@ -18,8 +18,7 @@
     "react-native-autocomplete-input": "^5.5.5"
   },
   "devDependencies": {
-    "@types/react": "~19.1.10",
-    "@babel/core": "^7.28.3"
+    "@types/react": "~19.1.10"
   },
   "private": true
 }
