--- a/packages/react-native-autocomplete-input/package.json
+++ b/packages/react-native-autocomplete-input/package.json
@@ -30,15 +30,21 @@
     "url": "https://github.com/byteburgers/react-native-autocomplete-input/issues"
   },
   "homepage": "https://github.com/byteburgers/react-native-autocomplete-input#readme",
+  "peerDependencies": {
+    "react": ">=16.8.0 <19.1.1",
+    "react-native": ">=0.60.0"
+  },
   "devDependencies": {
-    "@react-native/typescript-config": "^0.80.2",
-    "@testing-library/react-native": "^13.3.3",
-    "react-test-renderer": "18.3.1",
+    "@react-native/typescript-config": "^0.81.0",
+    "@testing-library/react-native": "13.3.3",
+    "react-test-renderer": "19.1.0",
     "@types/jest": "^30.0.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.10",
     "babel-jest": "^30.0.5",
-    "jest": "^30.1.3",
-    "react": "18.3.1",
-    "react-native": "0.77.0"
+    "jest": "^30.0.4"
+  },
+  "jest": {
+    "preset": "react-native",
+    "testEnvironment": "node"
   }
 }
