--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,8 @@ updates:
   directory: "/" 
   schedule:
     interval: "weekly"
+  groups:
+    react:
+      patterns:
+        - "react"
+        - "react-test-renderer"
