--- a/packages/react-native-autocomplete-input/package.json
+++ b/packages/react-native-autocomplete-input/package.json
@@ -31,11 +31,11 @@
   },
   "homepage": "https://github.com/byteburgers/react-native-autocomplete-input#readme",
   "peerDependencies": {
-    "react": ">=16.8.0 <19.1.1",
-    "react-native": ">=0.60.0"
+    "react": "*",
+    "react-native": "*"
   },
   "devDependencies": {
-    "@react-native/typescript-config": "^0.82.1",
+    "@react-native/typescript-config": "^0.83.1",
     "@testing-library/react-native": "13.3.3",
     "react-test-renderer": "19.1.0",
     "@types/jest": "^30.0.0",
