--- a/packages/react-native-autocomplete-input/package.json
+++ b/packages/react-native-autocomplete-input/package.json
@@ -37,11 +37,11 @@
   "devDependencies": {
     "@react-native/typescript-config": "^0.83.1",
     "@testing-library/react-native": "13.3.3",
-    "react-test-renderer": "19.1.0",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.2.7",
     "babel-jest": "^30.0.5",
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "react-test-renderer": "^19.2.0"
   },
   "jest": {
     "preset": "react-native",
