build: validate expo deps (#534)

--- a/examples/StarWarsMovieFinder/package.json
+++ b/examples/StarWarsMovieFinder/package.json
@@ -6,18 +6,20 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "test": "tsc --noEmit",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "npm run test:typings && npm run test:expo-deps",
+    "test:typings": "tsc --noEmit",
+    "test:expo-deps": "npx expo install --check --json"
   },
   "dependencies": {
-    "expo": "~54.0.31",
+    "expo": "~54.0.32",
     "expo-status-bar": "~3.0.9",
-    "react": "19.2.0",
-    "react-native": "0.83.1",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-autocomplete-input": "^5.5.5"
   },
   "devDependencies": {
-    "@types/react": "~19.2.7"
+    "@types/react": "~19.1.10"
   },
   "private": true
 }
